--- a/estilo.css
+++ b/estilo.css
@@ -38,19 +38,25 @@
 }
 /* Vista escritorio */
 @media only screen and (min-width: 768px) {
-  .layout {
-    width: 1920px;
-    height: 1080px;
-
-    display: grid;
+.layout {
+    width: 100%;
+    /* height: 1080px; */
+    /* display: grid; */
     grid:
-      "header header header" auto
-      "leftSide body rightSide" 1fr
-      "footer footer footer" auto
-      / auto 1fr auto;
-    gap: 8px;
+        "header header header" auto
+        "leftSide body rightSide" 1fr
+        "footer footer footer" auto / auto 1fr auto;
+    /* gap: 8px; */
+}
+.body {
+    /* grid-area: body; */
+    text-align: center;
+    align-content: center;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5rem;
   }
-
+  
   .header {
     grid-area: header;
   }
@@ -67,11 +73,19 @@
     grid-area: footer;
   }
   .videos {
-    width: 98%;
-    display: flex;
-    gap: 16px;
-    flex-wrap: wrap;
-  }
+    width: 80%;
+    display: grid;
+    /* gap: 16px; */
+    : ;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-row-gap: 4rem;
+    justify-content: space-between;
+    align-content: space-around;
+    column-gap: 4rem;
+    align-items: center;
+    justify-items: stretch;
+}
 }
 
 html {
@@ -168,18 +182,18 @@ html {
 }
 
 .grow1 {
-  flex-grow: 1;
-  height: 14vh;
-  text-align: center;
-  border: 1px solid #e50695;
-  border-radius: 4px;
-  border-color: rgba(10, 20, 55, 0.92);
+    /* flex-grow: 1; */
+    /* height: 14vh; */
+    text-align: center;
+    border: 1px solid #e50695;
+    border-radius: 4px;
+    border-color: rgba(10, 20, 55, 0.92);
+    height: 10rem;
 }
 
 .grow1:hover {
   background: #e50695;
   color: white;
-  height: 14vh;
   border: 1px solid #e50695;
   border-radius: 4px;
   border-color: rgba(10, 20, 55, 0.92);
