--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 /* Vista movil */
 @media only screen and (max-width: 768px) {
   .layout {
-    width: 360px;
+    width: 100%;
     height: 800px;
 
     display: grid;
