--- a/estilo.css
+++ b/estilo.css
@@ -6,6 +6,13 @@
 
     display: grid;
   }
+  grid:{
+      "header header header" auto
+      "leftSide body rightSide" 1fr
+      "footer footer footer" auto
+      / auto 1fr auto;
+    gap: 8px;
+  }
   .header {
     grid-area: header;
   }
