--- a/estilo.css
+++ b/estilo.css
@@ -47,6 +47,7 @@
         "footer footer footer" auto / auto 1fr auto;
     /* gap: 8px; */
 }
+
 .body {
     /* grid-area: body; */
     font-family: "Inter",sans-serif;
@@ -76,7 +77,6 @@
     width: 80%;
     display: grid;
     /* gap: 16px; */
-    : ;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     grid-row-gap: 4rem;
@@ -93,7 +93,7 @@ html {
 }
 
 #menu {
-  background-color: rgba(10, 20, 55, 0.92);
+  background-color: rgba(10, 20, 55, 0.90);
   backdrop-filter: saturate(180%) blur(20px);
   color: #fff;
   height: 45px;
@@ -187,7 +187,7 @@ html {
     text-align: center;
     border: 1px solid #e50695;
     border-radius: 4px;
-    border-color: rgba(10, 20, 55, 0.92);
+    border-color: rgba(10, 20, 55, 0.90);
     height: 10rem;
 }
 
@@ -196,7 +196,7 @@ html {
   color: white;
   border: 1px solid #e50695;
   border-radius: 4px;
-  border-color: rgba(10, 20, 55, 0.92);
+  border-color: rgba(10, 20, 55, 0.90);
 }
 
 #WP {
@@ -209,4 +209,95 @@ html {
 
 #tiendanube {
   width: 25%;
+}
+
+.footer{
+  bottom: 2;
+  width: 99%;
+  position: fixed;
+}
+
+#foot {
+  background-color: rgba(10, 20, 55, 0.90);
+  backdrop-filter: saturate(180%) blur(20px);
+  color: #fff;
+  height: 45px;
+  padding-left: 18px;
+  border-radius: 4px;
+}
+#foot ul,
+#foot li {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+}
+#foot ul {
+  width: 100%;
+}
+#foot li {
+  float: left;
+  display: inline;
+  position: relative;
+}
+#foot a {
+  display: block;
+  line-height: 45px;
+  padding: 0 14px;
+  margin: auto 1.3vh;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
+}
+#foot a.dropdown-arrow:after {
+  content: "\25BE";
+  margin-left: 5px;
+}
+#foot li a:hover {
+  color: white;
+  background: #e50695;
+}
+#foot input {
+  display: none;
+  margin: 0;
+  padding: 0;
+  height: 45px;
+  width: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+#foot label {
+  display: none;
+  line-height: 45px;
+  text-align: center;
+  position: absolute;
+  left: 35px;
+}
+#foot label:before {
+  font-size: 1.6em;
+  content: "\2261";
+  margin-left: 20px;
+}
+#foot ul.sub-foots {
+  height: auto;
+  overflow: hidden;
+  width: 170px;
+  background: #444444;
+  position: absolute;
+  z-index: 99;
+  display: none;
+}
+#foot ul.sub-foots li {
+  display: block;
+  width: 100%;
+}
+#foot ul.sub-foots a {
+  color: #ffffff;
+  font-size: 16px;
+}
+#foot li:hover ul.sub-foots {
+  display: block;
+}
+#foot ul.sub-foots a:hover {
+  background: #f2f2f2;
+  color: #444444;
 }
