--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,32 @@
+/* Tema negro */
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #eee;
+    background: #0d0c10;
+  }
+  html{
+    background: #0d0c10;
+  }
+  .grow1 {
+    border-color: rgba(255, 0, 0, 0.9);
+  }
+}
+/* Tema blanco */
+@media (prefers-color-scheme: light) {
+  body {
+    color: rgb(0, 0, 0);
+    background: ghostwhite;
+  }
+
+  html{
+    background: ghostwhite;
+  }
+
+  .grow1 {
+    border-color: rgba(10, 20, 55, 0.9);
+  }
+}
+
 /* Vista movil */
 @media only screen and (max-width: 768px) {
   .layout {
@@ -99,7 +128,6 @@
 }
 
 html {
-  background: ghostwhite;
   user-select: none;
 }
 
@@ -248,7 +276,6 @@ html {
   text-align: center;
   border: 1px solid #e50695;
   border-radius: 16px;
-  border-color: rgba(10, 20, 55, 0.9);
   height: 10rem;
 }
 
@@ -357,4 +384,22 @@ html {
 .footer {
   bottom: 5;
   position: fixed;
+}
+#theme{
+  background-color: transparent;
+  border: none;
+  margin: 13.4% auto;
+}
+#themeIcon{
+  width: 30px;
+  background-color: ghostwhite;
+  border-radius: 513px;
+}
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+.light-mode {
+  background-color: white;
+  color: black;
 }
