--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@
     color: #eee;
     background: #0d0c10;
   }
-  html{
+  html {
     background: #0d0c10;
   }
   .grow1 {
@@ -18,7 +18,7 @@
     background: ghostwhite;
   }
 
-  html{
+  html {
     background: ghostwhite;
   }
 
@@ -107,8 +107,7 @@
     grid-area: footer;
     bottom: 5;
     width: 99%;
-    position: fixed;
-}
+  }
   .videos {
     width: 80%;
     display: grid;
@@ -298,98 +297,108 @@ html {
 #tiendanube {
   width: 15%;
 }
+
+#videosShopify {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 20px;
+}
+
 #foot {
-	background-color: rgba(10, 20, 55, 0.87);
+  background-color: rgba(10, 20, 55, 0.87);
   backdrop-filter: saturate(180%) blur(20px);
   color: #fff;
   height: 45px;
   padding-left: 18px;
   border-radius: 10px;
 }
-#foot ul, #foot li {
-	margin: 0 auto;
-	padding: 0;
-	list-style: none
+#foot ul,
+#foot li {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
 }
 #foot ul {
-	width: 100%;
+  width: 100%;
 }
 #foot li {
-	float: left;
-	display: inline;
-	position: relative;
+  float: left;
+  display: inline;
+  position: relative;
 }
 #foot a {
-	display: block;
-	line-height: 45px;
-	padding: 0 14px;
-	text-decoration: none;
-	color: #FFFFFF;
-	font-size: 16px;
+  display: block;
+  line-height: 45px;
+  padding: 0 14px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
 }
 #foot a.dropdown-arrow:after {
-	content: "\23F7";
-	margin-left: 5px;
+  content: "\23F7";
+  margin-left: 5px;
 }
 #foot li a:hover {
-	color: #FFFFFF;
-	background: #E40595;
+  color: #ffffff;
+  background: #e40595;
 }
 #foot input {
-	display: none;
-	margin: 0;
-	padding: 0;
-	height: 45px;
-	width: 100%;
-	opacity: 0;
-	cursor: pointer
+  display: none;
+  margin: 0;
+  padding: 0;
+  height: 45px;
+  width: 100%;
+  opacity: 0;
+  cursor: pointer;
 }
 #foot label {
-	display: none;
-	line-height: 45px;
-	text-align: center;
-	position: absolute;
-	left: 35px
+  display: none;
+  line-height: 45px;
+  text-align: center;
+  position: absolute;
+  left: 35px;
 }
 #foot label:before {
-	font-size: 1.6em;
-	content: "\2261"; 
-	margin-left: 20px;
+  font-size: 1.6em;
+  content: "\2261";
+  margin-left: 20px;
 }
-#foot ul.sub-foots{
-	height: auto;
-	overflow: hidden;
-	width: 170px;
-	background-color: rgba(10, 20, 55, 0.87);
+#foot ul.sub-foots {
+  height: auto;
+  overflow: hidden;
+  width: 170px;
+  background-color: rgba(10, 20, 55, 0.87);
   backdrop-filter: saturate(180%) blur(20px);
-	position: absolute;
-	z-index: 99;
-	display: none;
+  position: absolute;
+  z-index: 99;
+  display: none;
 }
 #foot ul.sub-foots li {
-	display: block;
-	width: 100%;
+  display: block;
+  width: 100%;
 }
 #foot ul.sub-foots a {
-	color: #FFFFFF;
-	font-size: 16px;
+  color: #ffffff;
+  font-size: 16px;
 }
 #foot li:hover ul.sub-foots {
-	display: block
+  display: block;
 }
-#foot ul.sub-foots a:hover{
-	background: #E40595;
-	color: #FFFFFF;
+#foot ul.sub-foots a:hover {
+  background: #e40595;
+  color: #ffffff;
 }
 .footer {
+  margin: 30px auto;
   bottom: 5;
 }
-#theme{
+#theme {
   background-color: transparent;
   border: none;
   margin: 13.4% auto;
 }
-#themeIcon{
+#themeIcon {
   width: 30px;
   background-color: ghostwhite;
   border-radius: 513px;
